--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -99,8 +99,6 @@ ul li{
 }
 
 #image {
-
-    position: absolute;
     left: 3%;
     width:300px;
 }
@@ -108,6 +106,14 @@ ul li{
 #aboutmepara {
     margin-left:20px;
 }
+
+.test {
+    float:left;
+    padding-right: 20px;
+    padding-left:20px;
+   
+}
+
 .portfolio {
     position:relative;
     height:600px;
@@ -115,6 +121,10 @@ ul li{
     background-color: white;
     margin:auto;
     border: solid #dddddd;
+}
+
+.imagespacing {
+    padding-left:20px;
 }
 
 .contact {
