--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -59,6 +59,7 @@ header {
 
 ul li{
     display: inline;
+    
   }
 
   
@@ -79,6 +80,10 @@ ul li{
       color:green;
   }
 
+a {
+    text-decoration:none;
+    color:black;
+}
 
 .aboutme {
     position:relative;
